Sat Feb  7 13:00:20 CET 2004 (tk)
---------------------------------
  * libclamav: fixed compilation error (reported by Nigel)

Fri Feb  6 20:50:43 CET 2004 (tk)
---------------------------------
  * libclamav: ole2 wrapper: fixed segfault with some documents (Thomas Lamy)

Fri Feb  6 14:36:36 CET 2004 (tk)
---------------------------------
  * support for clamav-config.h instead of multiple defines (Thomas Lamy)
  * libclamav: more flexible file type recognition (Thomas Lamy)

Fri Feb  6 13:20:51 GMT 2004 (njh)
----------------------------------
  * libclamav:	Added new bounce message

Thu Feb  5 13:49:24 GMT 2004 (njh)
----------------------------------
  * contrib:	clamav.exe now integrates with WinZip8.1

Thu Feb  5 11:25:56 GMT 2004 (njh)
----------------------------------
  * libclamav:	Bounce delimeters were found by a list of strcasecmps,
  			now handled in a table which means it's easier to
			add new examples as they are found

Wed Feb  4 16:33:08 GMT 2004 (trog)
-----------------------------------
  * libclamav: ole2_extract.c: Improve error handling

Wed Feb  4 13:34:28 GMT 2004 (njh)
---------------------------------
  * libclamav:	Binhex now removes repetitive characters before handling the
			header (used to be the other way around)
		Handle partial writes in mbox - and print when write fails
		Handle blobAddData of more than 128K

Tue Feb  3 22:58:10 GMT 2004 (njh)
---------------------------------
  * libclamav:	Catch another example of Worm.Dumaru.Y

Tue Feb  3 14:38:04 GMT 2004 (njh)
----------------------------------
  * libclamav:	Speeded up binhex decoding using table look up
  		Fixed possible infinite loop when decoding compressed binhex
		Both fixes thanks to Thomas Lamy <Thomas.Lamy@in-online.net>

Tue Feb  3 02:31:55 CET 2004 (tk)
---------------------------------
  * libclamav: + don't report errors when archive limits are reached
	       + enabled scanning of "X-UIDL" mail files